# parkinsons-digest

./: .env.example  .gitignore  README.md  docker-compose.yaml  manage.py  pyproject.toml
config/: settings.py  settings_local.example.py  settings_prod.py  urls.py
contact/: admin.py  forms.py  models.py  urls.py  views.py
contact/migrations/: 0001_initial.py
contact/templates/contact/: feedback_form.html  thanks.html
feed/: admin.py  constants.py  filters.py  models.py  tests.py  urls.py  views.py
feed/migrations/: 0001_initial.py  0002_alter_article_title_alter_paper_journal_and_more.py  0003_triallocation.py  0004_remove_triallocation_latitude_and_more.py
feed/static/feed/: main.css
feed/templates/: base.html  privacy.html
feed/templates/feed/: feed.html
feed/templates/feed/partials/: _filter_buttons.html
feed/templatetags/: feed_tags.py
ingest/management/commands/: ingest.py  ingest_papers.py  ingest_rss.py  ingest_trials.py
