[project]
name = "pd-tracker"
version = "0.1.0"
requires-python = ">= 3.10"
dependencies = [
    "django>=5.2.15",
    "django-filter>=25.2",
    "feedparser>=6.0.12",
    "requests>=2.34.2",
]

[dependency-groups]

dev = [
    "djlint>=1.36.4",
]

[tool.djlint]
indent=2
format_js=true
format_css=true

[tool.djlint.css]
indent_size=2

[tool.djlint.js]
indent_size=2
