[project]
name = "pd-tracker"
version = "0.1.0"
requires-python = ">= 3.10"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=5.2.15",
    "django-filter>=25.2",
    "feedparser>=6.0.12",
    "gunicorn>=26.0.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "whitenoise>=6.12.0",
]

[dependency-groups]

dev = [
    "djlint>=1.36.4",
    "ruff>=0.15.11",
]

[tool.djlint]
indent=2
format_js=true
format_css=true

[tool.djlint.css]
indent_size=2

[tool.djlint.js]
indent_size=2
